objects/LLC_BI__Collateral__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Condo_Fees__c</fullName>
        <description>The user populates this currency field with the total monetary value of fees associated with the condo. By default, it is blank.</description>
        <inlineHelpText>Enter the total monetary value of fees associated with the condo.</inlineHelpText>
        <label>Condo Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Date__c</fullName>
        <description>This field is optional and manually populated. If a government contract is being used as collateral, use this field to specify the date the contract was entered into.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the contract number of a government contract collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contract_Type__c</fullName>
        <description>This field is optional and manually populated. Use this picklist field to specify the contract type as Contract or Letter Contract.</description>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Letter Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Country__c</fullName>
        <description>Users populate this text field with the country of the address part of collateral details. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the country of the address.</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__County__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the county where the collateral is located.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Collateral County</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Current_Usage__c</fullName>
        <description>Users populate this optional field with the assets current mileage or hours of operation.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt_Secured__c</fullName>
        <description>The user manually populates this field to indicate the debt secured by the collateral. This field links the collateral to the debt it secures.</description>
        <inlineHelpText>Indicate the debt secured by the collateral.</inlineHelpText>
        <label>Debt Secured</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guarantor&apos;s debt</fullName>
                </value>
                <value>
                    <fullName>Only this debt for the applicant</fullName>
                </value>
                <value>
                    <fullName>This debt and all associated debts for the applicant with this organization</fullName>
                </value>
                <value>
                    <fullName>This debt and any future debts for the applicant with this organization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Account_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the account number for a deposit account being used as collateral.</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Deposit Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depreciation_Term__c</fullName>
        <description>Users populate this optional field with the depreciation term (in years) of the asset.</description>
        <label>Depreciation Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Depth__c</fullName>
        <description>This number field auto-populates and specifies the level of depth in a complex collateral hierarchy.  This is one of the components used to drive the visual representation of the hierarchy.</description>
        <label>Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>This field is optional and manually populated. It is a text field associated with all types of collateral. Use this field to provide further description of assets being used as collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Dwelling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox that specifies if the collateral is used as a place of residence. Checked = True. Unchecked = False.</description>
        <label>Dwelling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional currency field with the Early Buyout Option (EBO) amount.</description>
        <label>Early Buyout Option Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Premium_Percentage__c</fullName>
        <description>Users populate this optional field with the premium percentage added for an Early Buyout Option (EBO).</description>
        <label>Early Buyout Option Premium Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EBO_Yield__c</fullName>
        <description>Users populate this optional percent field with the lessor&apos;s yield for an Early Buyout Option (EBO).</description>
        <label>Early Buyout Option Yield</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Engines_Equipment_Description__c</fullName>
        <description>This field is optional and manually populated. Use this field to further describe the engines and/or equipment of the collateral being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Engines/Equipment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Existing_Beneficiaries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that there are existing beneficiaries to a Life Insurance Policy collateral being used to secure a loan.</description>
        <label>Existing Beneficiaries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__FAA_Registration_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to record the FAA Registration Number on aircraft collateral. The FAA Registration Number serves the same purpose as a license plate for a motor vehicle.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>FAA Registration Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Lien_Position_Value__c</fullName>
        <description>This field is optional and manually populated. It is the value of the first lien position.</description>
        <label>First Lien Position Value</label>
        <summarizedField>LLC_BI__Lien__c.LLC_BI__Amount__c</summarizedField>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Position__c</field>
            <operation>equals</operation>
            <value>1st</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>LLC_BI__Lien__c.LLC_BI__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>LLC_BI__Lien__c.LLC_BI__Collateral__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Flood_Insurance_Required_Amount__c</fullName>
        <description>The user manually populates this field with the flood insurance amount required. The minimum federal requirement for this amount is the lesser of either the outstanding principal loan balance or the value of the improved property, mobile home, or personal property used to secure the loan.</description>
        <inlineHelpText>Enter the required flood insurance amount.</inlineHelpText>
        <label>Flood Insurance Required Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address_NE__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. It contains the unencrypted address only if Platform Encryption is not used. The field cannot be encrypted as Use this field in a formula.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address_PE__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. The field should be encrypted using Platform Encryption. The field will only be populated when Platform Encryption is enabled for the nCino Platform.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Full_Address__c</fullName>
        <description>This field is optional and a concatenated field for full collateral address. It contains the unencrypted address for backwards compatibility. The field cannot be encrypted because it is a formula.</description>
        <formula>LLC_BI__Full_Address_NE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gross_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the maximum amount of weight related to a ship&apos;s overall internal volume. When mapped to LaserPro, this field is unique to a Vessel subtype.</description>
        <label>Gross Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Cost_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Users populate this optional field with the asset amount that is categorized as hard costs.</description>
        <label>Hard Cost Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Cost_Percentage__c</fullName>
        <description>The system automatically populates this field via a formula. It is used to calculate the percentage of hard cost to asset value.</description>
        <formula>IF( OR(ISBLANK(LLC_BI__Value__c), LLC_BI__Value__c = 0) , 0, LLC_BI__Hard_Cost_Amount__c / LLC_BI__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of an asset&apos;s value categorized as hard costs.</inlineHelpText>
        <label>Hard Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Authority__c</fullName>
        <description>This field is optional. It auto-populates if there is an account that has authority to pledge this collateral.</description>
        <formula>LLC_BI__Authority_Number__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is there an account that has authority to pledge this collateral?</inlineHelpText>
        <label>Has Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Held_By__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify who holds ownership of the collateral being used to secure a loan. The values None, Lender, and Other Holder are mapped to LaserPro. This field applies to collateral with the Securities subtype.</description>
        <label>Held By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Other Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used to select the highest level parent record in a hierarchy for the Collateral Management record.</description>
        <label>Highest</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Collaterals (Highest)</relationshipLabel>
        <relationshipName>HighestCollaterals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hull_and_Engine_Log_Books_Description__c</fullName>
        <description>This field is optional and manually populated. Use this text field to provide information about the hull and engine log books that are needed when securing a loan with boat/ vessel collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hull and Engine Log Books Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__ITC_Percentage__c</fullName>
        <description>Users populate this optional field with the percentage of the asset or investment value that can be claimed under an investment tax credit.</description>
        <label>Investment Tax Credit Percentage</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Include_Land_As_Collateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify if the land where the piece of property collateral is located should also be included in the collateral amount. Checked = True. Unchecked = False.</description>
        <label>Include Land As Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Insurance_Expiration_Date__c</fullName>
        <description>This field is optional and manually populated. It is the date that the insurance policy expires.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Insurance_Type__c</fullName>
        <description>This field is optional and manually populated. It is the type of insurance policy.</description>
        <label>Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workman&apos;s Comp</fullName>
                </value>
                <value>
                    <fullName>Business Personal Property</fullName>
                </value>
                <value>
                    <fullName>Comprehensive/Collision</fullName>
                </value>
                <value>
                    <fullName>Condo Master</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood - Building</fullName>
                </value>
                <value>
                    <fullName>Flood - Contents</fullName>
                </value>
                <value>
                    <fullName>General Liability</fullName>
                </value>
                <value>
                    <fullName>Homeowners</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Other (Boat, Airplane, etc.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Copy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an auto generated indicator based on collateral record being created by either Copy or Add Sub Collateral functionality in complex collateral.  True indicates the auto creation of the collateral record.</description>
        <inlineHelpText>Indicates the auto creation of a collateral record via Add Child or Add Sub Collateral.</inlineHelpText>
        <label>Is Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Leased_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this optional checkbox field anytime an associated pledge record has the Is_Leased_Asset_c field on the Collateral Pledged object set to true. If an associated pledge record has been removed or invalidated, the checkbox is not selected.</description>
        <label>Is Leased Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_New_Construction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this checkbox field to indicate if the property is a new construction.</description>
        <inlineHelpText>Select the checkbox if the property is a new construction.</inlineHelpText>
        <label>Is New Construction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Public_Listing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this checkbox field to indicate if the property is listed publicly.</description>
        <inlineHelpText>Select the checkbox if the property is publicly listed.</inlineHelpText>
        <label>Is Public Listing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Leasehold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually populated. It is a checkbox used to specify that the collateral is used in a leasehold, where the owner has granted temporary rights to a lessee to hold land or property.</description>
        <label>Leasehold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legacy_Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field links to the legacy collateral record after being migrated to the new collateral structure. It is auto-populated.</description>
        <label>Legacy Collateral</label>
        <referenceTo>LLC_BI__Loan_Collateral__c</referenceTo>
        <relationshipLabel>Legacy Collateral</relationshipLabel>
        <relationshipName>Legacy_Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Legal_Description__c</fullName>
        <description>The user populates this text field with the collateral property’s legal description.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the property’s legal description.</inlineHelpText>
        <label>Legal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lendable_Value__c</fullName>
        <description>This field is optional. It automatically populates based on the collateral value multiplied by the collateral advance rate.</description>
        <formula>IF (LLC_BI__Is_Leased_Asset__c = true, LLC_BI__Value__c, ROUND(LLC_BI__Value__c *  LLC_BI__Collateral_Type__r.LLC_BI__Advance_Rate__c, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The collateral value multiplied by the collateral advance rate.</inlineHelpText>
        <label>Lendable Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Letter_of_Credit_Date__c</fullName>
        <description>This field is optional and manually populated. Use this field to capture the date on which the Letter of Credit was issued.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Letter of Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Benefit_Amount__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the amount of the life insurance coverage.</description>
        <label>Life Insurance Benefit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_City__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the city of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_State__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the state of the insurance company where the life insurance policy is held.</description>
        <label>Life Insurance Company State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_Street_Address__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the physical street address of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company_ZipCode__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the ZIP code forthe address of the insurance company where the life insurance policy is held.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company ZipCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Company__c</fullName>
        <description>This field is used to specify the company that holds the Life Insurance Policy being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Life_Insurance_Policy_Number__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the policy number for the life insurance policy being used as collateral to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Life Insurance Policy Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Liquidation_Value__c</fullName>
        <description>This field is optional and manually populated. This is the likely value of the collateral if it does not sell on the open market.</description>
        <label>Liquidation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loans_To_Value__c</fullName>
        <description>The system automatically populates this field to display the Loans to Value calculation using the total loan amount divided by the collateral value.</description>
        <formula>LLC_BI__Total_Active_Loans_Value__c / LLC_BI__Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Loans to Value calculation using the total loan amount divided by the collateral value.</inlineHelpText>
        <label>Collateral Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lot_Size__c</fullName>
        <description>The user populates this optional number field to specify the size of the property’s plot of land.</description>
        <inlineHelpText>Enter the total area of the property’s plot of land in your local unit of measurement.</inlineHelpText>
        <label>Lot Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lot__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the real estate lot number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lot</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__MSRP__c</fullName>
        <description>The system automatically populates this currency field to record the collateral&apos;s manufacturer-suggested retail price. By default, this field is blank.</description>
        <inlineHelpText>This field displays the collateral&apos;s suggested retail price.</inlineHelpText>
        <label>MSRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Make__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the make of a titled piece of collateral.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Manufacturer__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the party that manufactured the collateral being used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Marina_Port_Name__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name of the marina or port that is the home marina or port of the boat / vessel collateral being used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marina / Port Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Maturity_Date__c</fullName>
        <description>Users manually populate this optional text field. This field is used as the maturity date of the collateral. For Example: a bond C.D./Share Certificate or note.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Model__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the model of titled collateral used to secure the loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Heat_Bill__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this currency field to indicate the collateral property’s monthly heat bill amount.</description>
        <inlineHelpText>Enter the average monthly heat bill amount for the collateral property.</inlineHelpText>
        <label>Monthly Heat Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Tax__c</fullName>
        <description>The system populates this formula field to calculate the monthly tax amount for the collateral property.</description>
        <formula>LLC_BI__Yearly_Tax__c/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the collateral property’s monthly tax amount.</inlineHelpText>
        <label>Monthly Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Name_of_Insured__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify the name as it appears on a life insurance policy being used to secure a loan.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of Insured</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Net_Tonnage__c</fullName>
        <description>This field is optional and manually populated. Use this field to specify a vessel&apos;s net tonnage. Net tonnage is used to calculate the port duties.</description>
        <label>Net Tonnage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Revaluation_Due_Date__c</fullName>
        <description>A date field used to capture the date the next collateral revaluation is due. This would be entered by the user when a new valuation is entered. No default value.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Next collateral revaluation due date</inlineHelpText>
        <label>Next Revaluation Due Date</label>
        <type>Date</type>
    </fields>
</CustomObject>